--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -41,7 +41,7 @@ border-radius: 11px;
 
 }
 
-.Submit {
+.submit-button {
     background-color: #007bff;
     border: none;
     border-radius: 7px;
@@ -50,5 +50,5 @@ border-radius: 11px;
     color: white;  
     margin-top: 20px;
     margin-bottom: 20px;
-    
+
 }
